/*
 * To change this license header, choose License Headers in Project Properties.
 * To change this template file, choose Tools | Templates
 * and open the template in the editor.
 */
package Classes;

/**
 *
 * @author Universidade
 */
public class Freelancer {
    
    private String id;
    private String name;
    private String levelOfExpertise;
    private String email;
    private String NIF;
    private String bankAccountIBAN;
    private String address;
    private String country;
}
