/*
 * To change this license header, choose License Headers in Project Properties.
 * To change this template file, choose Tools | Templates
 * and open the template in the editor.
 */
package Classes;

/**
 *
 * @author Universidade
 */
public class PaymentScheduler {
    
    private int dayMonth;
    // LocalTime timeOfDay;
    
}
