@startuml MD

skinparam classAttributeIconSize 0
hide methods
left to right direction

class App {

}

class Organization {
        - String name
        - String NIF
}

class Transaction {

}

class Task {
        - String id
        - String description
        - Integer durationInHours
        - Double costPerHourOfJuniorEur
        - String category
}

class PaymentDetails {
        Boolean isPaid
}

class TaskExecutionDetails {
        - LocalDate endDate
        - Integer delayInDays
        - String DescriptionQualityOfWork
}

class Collaborator {
        - String name
        - String email
        - String password
}

class Manager {
        - String name
        - String email
        - String password
}

class PaymentScheduler {
        - Integer dayMonth
        - LocalTime timeOfDay
}

class Administrator {
        - String name
        - String email
        - String password
}

class EmailScheduler {

}

class Freelancer {
        - String id
        - String name
        - String levelOfExpertise
        - String email
        - String NIF
        - String bankAccountIBAN
        - String address
        - String country
}

Transaction                  "1" -- "1"      TaskExecutionDetails      : executed with >
Organization                 "1" -- "1"      Collaborator              : has >
Organization                 "1" -- "1"      Manager                   : has >
Organization                 "1" -- "1"      PaymentScheduler          : uses >
Organization                 "1" -- "*"      Task                      : publishes >
Organization                 "1" -- "*"      Transaction               : has >
App                          "1" -- "1"      MonetaryUnitConversionAPI : supports >
App                          "1" -- "*"      Organization              : has >
App                          "1" -- "1"      EmailAPI                  : supports >
App                          "1" -- "1"      PaymentAPI                : supports >
App                          "1" -- "*"      Administrator             : has >
App                          "1" -- "*"      Freelancer                : has >
App                          "1" -- "1"      EmailScheduler            : has >
(Organization, Transaction)      ..          PaymentDetails

@enduml